--- a/app/src/main/res/layout/fragment_all_users.xml
+++ b/app/src/main/res/layout/fragment_all_users.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="info.androidhive.firebase.fragments.AllUsersFragment">
+    tools:context=".fragments.allUsersFragment.AllUsersFragment">
 
     <com.tuesda.walker.circlerefresh.CircleRefreshLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
