--- a/app/src/main/res/layout/match_list_row.xml
+++ b/app/src/main/res/layout/match_list_row.xml
@@ -74,10 +74,10 @@
             android:id="@+id/goalsAwayTeam"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/awayTeam"
-            android:layout_centerHorizontal="true"
             android:text="time"
-            android:textColor="@color/title" />
+            android:textColor="@color/title"
+            android:layout_below="@+id/textViewDate"
+            android:layout_centerHorizontal="true" />
 
         <TextView
             android:id="@+id/textViewScore"
@@ -98,6 +98,15 @@
             android:maxLength="10"
             android:text="status"
             android:textColor="@color/title" />
+
+        <TextView
+            android:id="@+id/textViewDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="date"
+            android:textColor="@color/title"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
     </RelativeLayout>
     </android.support.v7.widget.CardView>
 
