--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1976d2</color>
+    <color name="colorPrimaryDark">#2196F3</color>
     <color name="colorAccent">#c1c1c1</color>
 
     <color name="bg_login">#26ae90</color>
