--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -6,6 +6,8 @@
     android:layout_gravity="center"
     android:background="@color/colorPrimary"
     android:fitsSystemWindows="true"
+    android:clickable="true"
+    android:focusableInTouchMode="true"
     tools:context=".activity.loginActivity.LoginActivity">
 
     <LinearLayout
