--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="SOCCER EVENTS"
+            android:text="@string/soccer_events"
             android:id="@+id/textView5"
             android:textColor="@color/colorPrimaryDark"
             android:layout_marginTop="45dp"
