--- a/app/src/main/res/layout/dialog_username.xml
+++ b/app/src/main/res/layout/dialog_username.xml
@@ -10,7 +10,7 @@
         android:id="@+id/dialogTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New name"
+        android:text="@string/new_name"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
 
@@ -25,8 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:hint="Enter your name"
-            android:textColorHint="@color/primary_dark"
+            android:hint="@string/enter_your_name"
             android:inputType="textEmailAddress"
 
              />
