--- a/app/src/main/res/layout/league_table_row.xml
+++ b/app/src/main/res/layout/league_table_row.xml
@@ -56,7 +56,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textSize="16dp"
-                    android:text="Pos"
+                    android:text="@string/pos"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
                 <TextView
@@ -81,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textSize="16dp"
-                    android:text="Games"
+                    android:text="@string/games"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
                 <LinearLayout
@@ -153,7 +153,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="GD"
+                    android:text="@string/gd"
                     android:textSize="16dp"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:layout_gravity="center_horizontal" />
@@ -210,7 +210,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textSize="16dp"
-                    android:text="Pts"
+                    android:text="@string/pts"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
