--- a/app/src/main/res/layout/users_list_row.xml
+++ b/app/src/main/res/layout/users_list_row.xml
@@ -21,7 +21,6 @@
         android:layout_marginRight="@dimen/margin_16dp"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif"
-        android:text="pos"
         android:textSize="16sp" />
 
     <TextView
@@ -31,7 +30,6 @@
         android:layout_marginLeft="72dp"
         android:layout_marginTop="10dp"
         android:fontFamily="sans-serif"
-        android:text="name"
         android:textColor="#000"
         android:textSize="16sp" />
 
@@ -41,7 +39,6 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:paddingTop="5dp"
-        android:text="points"
         android:textSize="14sp"
         android:layout_alignTop="@+id/textView3"
         android:layout_toRightOf="@+id/textView3"
@@ -56,7 +53,7 @@
         android:layout_below="@+id/textViewUserRateName"
         android:fontFamily="sans-serif"
         android:paddingTop="5dp"
-        android:text="Points: "
+        android:text="@string/points_user"
         android:textSize="14sp" />
 
 </RelativeLayout>
