add swipe refresh, except CurrentUserRateFragment

--- a/app/src/main/res/layout/fragment_league.xml
+++ b/app/src/main/res/layout/fragment_league.xml
@@ -4,6 +4,11 @@
     android:layout_height="match_parent"
     tools:context=".fragments.leagueFragment.LeagueFragment">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refreshLeagueFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_league"
         android:layout_width="match_parent"
@@ -13,13 +18,14 @@
         android:layout_marginLeft="0dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="0dp" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/wait_sec"
-        android:id="@+id/textViewLeague"
+        android:id="@+id/textViewLimitMsg"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
