--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimary">#2196f3</color>
     <color name="colorPrimaryDark">#2196f3</color>
     <color name="colorAccent">#c1c1c1</color>
 
@@ -35,6 +35,8 @@
     <color name="disableback">#DFDFDF</color>
     <color name="disabletext">#A5A5A5</color>
     <color name="app_name">#009ca9</color>
+    <color name="blue" >#1976d2</color>
+    <color name="green" >#628f3e</color>
 
 
 </resources>
