--- a/app/src/main/res/layout/user_rate_list_row.xml
+++ b/app/src/main/res/layout/user_rate_list_row.xml
@@ -1,58 +1,109 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="?android:attr/selectableItemBackground"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
-    android:paddingBottom="10dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="10dp">
+    >
 
-
-    <TextView
-        android:id="@+id/textViewStatusRate"
+    <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/cv"
-        android:layout_below="@+id/rated_away_team"
-        android:layout_centerHorizontal="true"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        app:cardCornerRadius="2dp"
+        android:clickable="true"
+        >
 
-    <TextView
-        android:id="@+id/rated_home_team"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:textColor="@color/title"
-        android:textStyle="bold" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
 
-    <TextView
-        android:id="@+id/rated_away_team"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/rated_home_team"
-        android:textColor="@color/title"
-        android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/ratedType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:textColor="@color/title"
-        android:textStyle="bold" />
+            <TextView
+                android:id="@+id/rated_home_team"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
 
-    <TextView
-        android:id="@+id/ratedPoints"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/ratedType"
-        android:textColor="@color/title"
-        android:textStyle="bold" />
+                android:textColor="@color/title"
 
-</RelativeLayout>
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textViewScore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLength="10"
+                android:text=" - "
+                android:textColor="@color/title"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/rated_home_team"
+                android:layout_toEndOf="@+id/rated_home_team" />
+
+            <TextView
+                android:id="@+id/rated_away_team"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:textColor="@color/title"
+                android:textStyle="bold"
+
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/textViewScore"
+                android:layout_toEndOf="@+id/textViewScore" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:id="@+id/relativeLayout"
+                android:layout_below="@+id/rated_home_team"
+                android:layout_toLeftOf="@+id/ratedPoints"
+                android:layout_toStartOf="@+id/ratedPoints">
+                <TextView
+                    android:id="@+id/r"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rate:"
+                    android:textColor="@color/title"
+                    android:textStyle="bold"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
+                <TextView
+                    android:id="@+id/ratedType"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:textColor="@color/title"
+                    android:textStyle="bold"
+                    android:layout_alignTop="@+id/r"
+                    android:layout_toRightOf="@+id/r"
+                    android:layout_toEndOf="@+id/r" />
+
+                <TextView
+                    android:id="@+id/rP"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="You can win:"
+                    android:textColor="@color/title"
+                    android:textStyle="bold"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/ratedPoints"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:textColor="@color/title"
+                android:textStyle="bold"
+                android:layout_alignTop="@+id/relativeLayout"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+</LinearLayout>
